<resources>
    <string name="app_name">MyReceipts</string>
    <string name="receipt_title_hint">Enter Title here.</string>
    <string name="receipt_title_label">Title</string>
    <string name="receipt_details_label">Details</string>
    <string name="shop_name">Shop name</string>
    <string name="receipt_comments">Comments</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="new_receipt">New</string>
    <string name="show_help">Help</string>
    <string name="subtitle_format">%1$d receipts</string>
    <string name="receipt_suspect_text">Choose Suspect</string>
    <string name="receipt_report_text">Report</string>
    <string name="receipt_date">Date</string>
    <string name="receipt_shop">Shop</string>
    <string name="receipt_report">%1$s!
      The crime was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="delete_receipt">Delete</string>
    <string name="receipt_report_no_suspect">there is no suspect.</string>
    <string name="receipt_report_suspect">the suspect is %s.</string>
    <string name="receipt_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Report</string>
</resources>
